# text2image

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py
text2image/: __init__.py  background.py  distortion.py  generator.py
