[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2image"
version = "0.1.0"
description = "Utilities for generating synthetic images of text or LaTeX equations."
readme = "README.md"
authors = [
    {name = "Abdulbasit Zahir"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pillow>=9.0.0",
    "numpy>=1.20",
    "opencv-python>=4.6",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["text2image*"]

[tool.setuptools.package-data]
text2image = ["../fonts/*.ttf", "../backgrounds/*.png"]

[project.urls]
Homepage = "https://github.com/abdulbaseet-zahir/text2image"
Repository = "https://github.com/abdulbaseet.zahir/text2image"
Issues = "https://github.com/yourusername/abdulbaseet.zahir/issues" 